<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/grup_wrapper"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/concert_grup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/concert_grup"
            android:imeOptions="actionNext"
            android:inputType="none" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/poblacio_wrapper"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/concert_poblacio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/concert_poblacio"
            android:imeOptions="actionNext"
            android:inputType="none" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lloc_wrapper"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/concert_lloc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/concert_lloc"
            android:imeOptions="actionNext"
            android:inputType="none" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/preu_wrapper"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/concert_preu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/concert_preu"
            android:imeOptions="actionNext"
            android:inputType="none" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/data_wrapper"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/concert_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pick_data"
            android:imeOptions="actionNext"
            android:inputType="none" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/linkBlue"
            android:textSize="15sp"
            android:text="SAVE"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:id="@+id/save"/>

        <TextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="DELETE"
            android:textColor="@color/red3"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>


