<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/grup_wrapper"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:id="@+id/concert_grup"
            android:imeOptions="actionNext"
            android:hint="@string/concert_grup"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/poblacio_wrapper"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:id="@+id/concert_poblacio"
            android:imeOptions="actionNext"
            android:hint="@string/concert_poblacio"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lloc_wrapper"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:id="@+id/concert_lloc"
            android:imeOptions="actionNext"
            android:hint="@string/concert_lloc"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/preu_wrapper"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/concert_preu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:autofillHints="" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showTimePickerDialog"
        android:text="@string/pick_data" />

    <TextView
        android:id="@+id/textData"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/date/ddmmyy" />

    <Button
        android:id="@+id/buttonHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showTimePickerDialog"
        android:text="@string/pick_time" />

    <TextView
        android:id="@+id/textHora"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/date/hhmmss" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/linkBlue"
            android:textSize="15sp"
            android:text="CREATE"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:id="@+id/create"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/linkBlue"
            android:textSize="15sp"
            android:text="CANCEL"
            android:layout_marginRight="35dp"
            android:layout_toLeftOf="@+id/create"
            android:id="@+id/cancel"/>

    </RelativeLayout>

</LinearLayout>


